--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -26,4 +26,20 @@
         - name: Run PyCharm Security
           uses: tonybaloney/pycharm-security@master
           with: 
-            fail_on_warnings: "no"        
+            fail_on_warnings: "yes"  
+
+    docker-grype-project:
+      name: Grype (Anchore) Project Scan
+      needs: [gitleaks]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out Git repository
+          uses: actions/checkout@v3
+
+        - name: Scan current project with Grype (Anchore)
+          id: scan-project
+          uses: anchore/scan-action@v3
+          with:
+            path: "."
+            fail-build: true
+            output-format: table      
