--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -88,7 +88,7 @@
             name: docker-image
             path: /tmp/docker-image.tar
             retention-days: 1
-            
+
     docker-trivy-vuln:
       name: Trivy vulnerability scanner
       runs-on: ubuntu-latest
@@ -112,3 +112,25 @@
             exit-code: '0'
             ignore-unfixed: false
             severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
+    docker-grype:
+      name: Grype (Anchore) Docker Scan
+      runs-on: ubuntu-latest
+      needs: [docker-build]
+      steps:
+        - name: Download artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: docker-image
+            path: /tmp
+
+        - name: Load Docker image
+          run: |
+            docker load --input /tmp/docker-image.tar
+
+        - name: Scan image wih Grype (Anchore)
+          id: scan-image
+          uses: anchore/scan-action@v3
+          with:
+            image: "${{ needs.docker-build.outputs.full_docker_image_tag }}"
+            output-format: table
+            fail-build: true
