--- a/.github/workflows/ci-iac.yml
+++ b/.github/workflows/ci-iac.yml
@@ -30,7 +30,7 @@ jobs:
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
-          severity: 'MEDIUM,HIGH,CRITICAL'
+          severity: 'CRITICAL'
 
   insecure-cf:
     name: Scan Insecure Cloudformation patterns
